Fix: rename Chat to Live Chat, add missing API_BASE, align chat window with WhatsApp

--- a/style.css
+++ b/style.css
@@ -650,7 +650,7 @@ img {
   display: none;
   position: fixed;
   bottom: 100px;
-  right: 100px;
+  right: 28px;
   z-index: 1000;
   width: 350px;
   height: 450px;
